# Aurora

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  run.bat
Aurora/headers/: axis.hpp  camera.hpp
Aurora/shaders/: 1.colors.frag  1.light_cube.frag  axis.vert  test.frag  test.vert
Aurora/src/: axis.cpp  main.cpp
